--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,11 +1,21 @@
 header{
     width: 100%;
-    background-color: rgba(167, 244, 240, 1);
+    background-image: radial-gradient(circle, #4df0ff, #4cf0ff, #4bf0ff, #4af0ff, #49f0ff, #51f1ff, #59f1ff, #60f2ff, #6ff3ff, #7cf4ff, #88f5ff, #93f6ff);
+    position: sticky;
+        top: 1px;
+        z-index: 100;
     nav{
         font-family: 'Lobster', cursive;
         
        div{
-        background-color: rgba(167, 244, 240, 1);
+        a{
+
+        }
+        a:hover{
+            font-size: 25px;
+        }
        }
     }
+    
+   
 }
