--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -6,20 +6,78 @@ main{
         #d_presentacion{
             display: flex;
             flex-wrap: wrap;
-            height: 80vh;
+            height: 90vh;
             width: 50%;
             justify-content: center;
             align-items: center; 
+            position: relative;
             h1{
                 font-size: 50px;
                 margin-left: 50px;
                 color: rgba(201, 255, 248, 1);
-                font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+                font-family: 'Alkalami', serif; 
+                position: relative;
+                z-index: 2;
+            }
+            h1:hover{
+                font-size: 52px;
+            }
+            video{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            .capa{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #1c1c1d;
+                opacity: 0.5;
+                mix-blend-mode: overlay;
+
             }
         }
         article{
-            height: 80vh;
+            height: 90vh;
             width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                height: 60vh;
+                border-radius: 20px;
+                position: relative;
+                z-index: 2;
+            }
+            img:hover{
+                border-radius: 10px;
+                height: 65vh;
+            }
+            
+            video{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            .capa{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #1c1c1d;
+                opacity: 0.5;
+                mix-blend-mode: overlay;
+
+            }
     
         }
     }
@@ -29,12 +87,13 @@ main{
         flex-wrap: wrap;
         align-items: center; 
         margin-left: 40px;
-        height: 20vh;
+        height: 30vh;
         font-size: 40px;
+        font-family: 'Alkalami', serif;
 
     }
     #p_about{
-        height: 40vh;
+        height: 60vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -47,32 +106,34 @@ main{
     }
 // EXPERIENCE
     #experience{
-        height: 20vh;
+        height: 30vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center; 
         font-size: 40px;
+        font-family: 'Alkalami', serif;
 
     }
     #s_experience{
-        height: 60vh;
+        height: 80vh;
         background-color: cornsilk;
 
     }
 // PROJECTS
     #projects{
-        height: 20vh;
+        height: 30vh;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: flex-end;
         margin-right: 150px;
         font-size: 40px;
+        font-family: 'Alkalami', serif;
         
     }
     #s_projects{
-        height: 60vh;
+        height: 80vh;
         background-color:cornsilk
     }
 // CONTACT
@@ -80,14 +141,13 @@ main{
         display: flex;
         flex-wrap: wrap;
         text-align: center;
-        
         #form{
             width: 50%;
             height: 80vh;
             #contact{
                 font-size: 40px;
-                margin-top: 20px;
-                font-family:monospace;
+                margin-top: 90px;
+                font-family: 'Alkalami', serif;
             }
             #p_contact{
                 font-size: 18px;
