--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -22,25 +22,6 @@ main{
             h1:hover{
                 font-size: 52px;
             }
-            video{
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-            .capa{
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: #1c1c1d;
-                opacity: 0.5;
-                mix-blend-mode: overlay;
-
-            }
         }
         article{
             height: 90vh;
@@ -55,11 +36,11 @@ main{
                 z-index: 2;
             }
             img:hover{
-                border-radius: 10px;
                 height: 65vh;
             }
-            
-            video{
+   
+        }
+        video{
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -78,8 +59,6 @@ main{
                 mix-blend-mode: overlay;
 
             }
-    
-        }
     }
 // ABOUT  
     #about{
@@ -100,10 +79,11 @@ main{
         align-items: center;
         margin-left: 15vh;
         margin-right: 15vh; 
-        font-size: 20px;
+        font-size: 30px;
         color: beige;
         text-align: center;
     }
+    
 // EXPERIENCE
     #experience{
         height: 30vh;
@@ -113,13 +93,24 @@ main{
         align-items: center; 
         font-size: 40px;
         font-family: 'Alkalami', serif;
+        position: relative;
 
     }
     #s_experience{
-        height: 80vh;
-        background-color: cornsilk;
-
+        height: 70vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+            margin: 5px;
+        }
+        img:hover{
+            height: 150px;
+        }
+        
     }
+
+
 // PROJECTS
     #projects{
         height: 30vh;
